@@ -26,17 +26,14 @@
 package org.geysermc.discordbot.commands;
 
 import com.jagrosh.jdautilities.command.Command;
-import com.jagrosh.jdautilities.command.CommandEvent;
 import com.jagrosh.jdautilities.command.SlashCommand;
 import com.jagrosh.jdautilities.command.SlashCommandEvent;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.entities.MessageEmbed;
 import org.geysermc.discordbot.GeyserBot;
 import org.geysermc.discordbot.util.BotColors;
-import org.geysermc.discordbot.util.PropertiesManager;
 
 import java.util.Comparator;
-import java.util.stream.Collectors;
 
 /**
  * Handle the help command
@@ -54,17 +51,12 @@ public class HelpCommand extends SlashCommand {
         event.replyEmbeds(handle("/")).queue();
     }
 
-    @Override
-    protected void execute(CommandEvent event) {
-        event.getMessage().replyEmbeds(handle(PropertiesManager.getPrefix())).queue();
-    }
-
     private MessageEmbed handle(String prefix) {
         EmbedBuilder helpEmbed = new EmbedBuilder()
                 .setColor(BotColors.SUCCESS.getColor())
                 .setTitle("Geyser Bot Help");
 
-        for (Command command : GeyserBot.COMMANDS.stream().sorted(Comparator.comparing(Command::getName)).collect(Collectors.toList())) {
+        for (Command command : GeyserBot.COMMANDS.stream().sorted(Comparator.comparing(Command::getName)).toList()) {
             if (!command.isHidden()) {
                 helpEmbed.addField("`" + prefix + command.getName() + (command.getArguments() != null ? " " + command.getArguments() : "") + "`", command.getHelp(), true);
             }
